# QSD.gen.samples

./: .gitignore  CMakeLists.txt  README.md
include/: QSD_samples_generator.hpp  global.hpp  lua_interface.hpp  runSim.hpp
mol/ala2vac/: input.lua
results/: get_traj_from_db.R  plot.R
run/: run.bash.sh
src/: QSD_samples_generator.cpp  lua_interface.cpp  main.cpp  runSim.cpp
